# deplixo-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Justfile  docker-compose.bws.yml  http_server.py  pyproject.toml  server.py  test_extended.py  test_http_extended.py  test_http_server.py  test_merge_files.py  test_new_flow.py  test_server.py
.github/workflows/: deploy.yml
plans/: marketplace-submission.md  usage-examples.md
